Optimize Error handling and add Logging
